Edit image width and height and add correct links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="https://www.allrecipes.com/recipe/262161/chef-johns-lobster-thermidor/">Chef John's Lobster Thermidor</a></li>
-        <li><a href="https://www.allrecipes.com/recipe/72267/blue-cheese-crusted-filet-mignon-with-port-wine-sauce/"> Blue Cheese Crusted Filet Mignon with Port Wine Sauce</a></li>
-        <li><a href="https://www.allrecipes.com/recipe/17076/king-crab-appetizers/">King Crab Appetizers</a></li>
+        <li><a href="recipes/chef_johns_lobster_thermidor.html">Chef John's Lobster Thermidor</a></li>
+        <li><a href="recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html"> Blue Cheese Crusted Filet Mignon with Port Wine Sauce</a></li>
+        <li><a href="recipes/king-crab-appetizers.html">King Crab Appetizers</a></li>
     </ul>
 </body>
 </html>
