--- a/recipes/king-crab-appetizers.html
+++ b/recipes/king-crab-appetizers.html
@@ -7,7 +7,7 @@
 </head>    
 <body>
     <h1>King Crab Appetizers</h1>
-    <img src="../resources/king-crab-appetizers.webp" alt="King Crab Appetizers">
+    <img src="../resources/king-crab-appetizers.webp" alt="King Crab Appetizers" width="400" height="400">
     <h2>Description</h2>
     <p>These crab tartlets have long since been a family favorite and are requested often at holiday get togethers.</p>
     <h3>Ingredients</h3>
