--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./resources/styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="recipe-list">
         <li><a href="recipes/chef_johns_lobster_thermidor.html">Chef John's Lobster Thermidor</a></li>
         <li><a href="recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html"> Blue Cheese Crusted Filet Mignon with Port Wine Sauce</a></li>
         <li><a href="recipes/king-crab-appetizers.html">King Crab Appetizers</a></li>
