--- a/recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html
+++ b/recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../resources/styles.css">
     <title>Blue Cheese Crusted Filet Mignon with Port Wine Sauce</title>
 </head>
 <body>
