--- a/recipes/king-crab-appetizers.html
+++ b/recipes/king-crab-appetizers.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../resources/styles.css"> 
     <title>King Crab Appetizers</title>
 </head>    
 <body>
-    <h1>King Crab Appetizers</h1>
+    <h1 class="heading-border">King Crab Appetizers</h1>
     <img src="../resources/king-crab-appetizers.webp" alt="King Crab Appetizers" width="400" height="400">
     <h2>Description</h2>
     <p>These crab tartlets have long since been a family favorite and are requested often at holiday get togethers.</p>
