Add flexbox in image description and home page recipe list

--- a/recipes/chef_johns_lobster_thermidor.html
+++ b/recipes/chef_johns_lobster_thermidor.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML5>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h1>Chef John's Lobster Thermidor</h1>
-    <img src="../resources/chef-johns-lobster-thermidor.webp" alt="Chef John's Lobster Thermidor" width="400" height="400">
-    <h2>Description</h2>
-    <p>I used a nice light sauce on this iconic special occasion dish--lobster thermidor--rather than the thick, cheesy sauce popular in the '80s. Lobster is sweet and rich tasting on its own, so the lighter sauce makes so much sense. And what's even better, you can prep these ahead of time and just pop them in the oven when your guests arrive!</p>
+    <div class="image-flex-container">
+        <img src="../resources/chef-johns-lobster-thermidor.webp" alt="Chef John's Lobster Thermidor" width="400" height="400">
+        <div class="flex-item-description">
+            <h2>Description</h2>
+            <p>I used a nice light sauce on this iconic special occasion dish--lobster thermidor--rather than the thick, cheesy sauce popular in the '80s. Lobster is sweet and rich tasting on its own, so the lighter sauce makes so much sense. And what's even better, you can prep these ahead of time and just pop them in the oven when your guests arrive!</p>
+        </div>
+    </div>
     <h3>Ingredients</h3>
     <ul>
         <li>4 (4 ounce) lobster tails</li>
