--- a/recipes/king-crab-appetizers.html
+++ b/recipes/king-crab-appetizers.html
@@ -8,9 +8,13 @@
 </head>    
 <body>
     <h1 class="heading-border">King Crab Appetizers</h1>
-    <img src="../resources/king-crab-appetizers.webp" alt="King Crab Appetizers" width="400" height="400">
-    <h2>Description</h2>
-    <p>These crab tartlets have long since been a family favorite and are requested often at holiday get togethers.</p>
+    <div class="image-flex-container">
+        <img src="../resources/king-crab-appetizers.webp" alt="King Crab Appetizers" width="400" height="400">
+        <div class="flex-item-description">
+            <h2>Description</h2>
+            <p>These crab tartlets have long since been a family favorite and are requested often at holiday get togethers.</p>
+        </div>
+    </div>
     <h3>Ingredients</h3>
     <ul>
         <li>2 (12 ounce) packages refrigerated biscuit dough</li>
