--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <span><h1>Odin Recipes</h1></span>
     <ul class="recipe-list">
         <li><a href="recipes/chef_johns_lobster_thermidor.html">Chef John's Lobster Thermidor</a></li>
         <li><a href="recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html"> Blue Cheese Crusted Filet Mignon with Port Wine Sauce</a></li>
