--- a/recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html
+++ b/recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h1>Blue Cheese Crusted Filet Mignon with Port Wine Sauce</h1>
-    <img src="../resources/blue-cheese-crusted-filet-mignon-with-port-wine-sauce-chibi-chef.jpg" alt="Blue Cheese Crusted Filet Mignon with Port Wine Sauce" width="400" height="400">
-    <h2>Description</h2>
-    <p>Worth the effort! Tender and flavorful, great for a dinner party. Make the sauce a day ahead to cut down on the prep time.</p>
+    <div class="image-flex-container">
+        <img src="../resources/blue-cheese-crusted-filet-mignon-with-port-wine-sauce-chibi-chef.jpg" alt="Blue Cheese Crusted Filet Mignon with Port Wine Sauce" width="400" height="400">
+        <div class="flex-item-description">
+            <h2>Description</h2>
+            <p>Worth the effort! Tender and flavorful, great for a dinner party. Make the sauce a day ahead to cut down on the prep time.</p>
+        </div>
+    </div>
     <h3>Ingredients</h3>
     <ul>
         <li>1 tablespoon butter</li>
