Add navbar and adjust recipe list flex

--- a/recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html
+++ b/recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html
@@ -7,7 +7,15 @@
     <title>Blue Cheese Crusted Filet Mignon with Port Wine Sauce</title>
 </head>
 <body>
-    <h1>Blue Cheese Crusted Filet Mignon with Port Wine Sauce</h1>
+    <div class="header">
+        <span><h1 id="recipes-heading">Blue Cheese Crusted Filet Mignon with Port Wine Sauce</h1></span>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
     <div class="image-flex-container">
         <img src="../resources/blue-cheese-crusted-filet-mignon-with-port-wine-sauce-chibi-chef.jpg" alt="Blue Cheese Crusted Filet Mignon with Port Wine Sauce" width="400" height="400">
         <div class="flex-item-description">
