--- a/recipes/chef_johns_lobster_thermidor.html
+++ b/recipes/chef_johns_lobster_thermidor.html
@@ -7,7 +7,15 @@
     <title>Chef John's Lobster Thermidor</title>
 </head>
 <body>
-    <h1>Chef John's Lobster Thermidor</h1>
+    <div class="header">
+        <span><h1 id="recipes-heading">Chef John's Lobster Thermidor</h1></span>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
     <div class="image-flex-container">
         <img src="../resources/chef-johns-lobster-thermidor.webp" alt="Chef John's Lobster Thermidor" width="400" height="400">
         <div class="flex-item-description">
