--- a/recipes/king-crab-appetizers.html
+++ b/recipes/king-crab-appetizers.html
@@ -7,7 +7,15 @@
     <title>King Crab Appetizers</title>
 </head>    
 <body>
-    <h1 class="heading-border">King Crab Appetizers</h1>
+    <div class="header">
+        <span><h1 id="recipes-heading">King Crab Appetizers</h1></span>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
     <div class="image-flex-container">
         <img src="../resources/king-crab-appetizers.webp" alt="King Crab Appetizers" width="400" height="400">
         <div class="flex-item-description">
