--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <span><h1>Odin Recipes</h1></span>
+    <div class="header">
+        <span><h1><a href="./index.html">Odin Recipes</a></h1></span>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
+    <h2 id="recipe-header">Recipes</h2>
     <ul class="recipe-list">
         <li><a href="recipes/chef_johns_lobster_thermidor.html">Chef John's Lobster Thermidor</a></li>
         <li><a href="recipes/blue-cheese-crusted-filet-mignon-with-port-wine-sauce.html"> Blue Cheese Crusted Filet Mignon with Port Wine Sauce</a></li>
